cif/org.eclipse.escet.cif.tests/tests/checks/FuncNoSpecificStdLibCheck1.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:
  ----------------------------------------------
  (1/4) Standard library function "abs" is used.
  ----------------------------------------------
   * In discrete variable "X.n":
     - disc int n = round(max(abs(cos(12.0) * 20.0), 7.0) + (sample d)[0]);
                              ^
  -----------------------------------------------
  (2/4) Standard library function "asin" is used.
  -----------------------------------------------
   * In discrete variable "X.d":
     - disc dist int d = binomial(asin(sin(0.5)), 2);
                                  ^
  ----------------------------------------------
  (3/4) Standard library function "cos" is used.
  ----------------------------------------------
   * In discrete variable "X.n":
     - disc int n = round(max(abs(cos(12.0) * 20.0), 7.0) + (sample d)[0]);
                                  ^
  ----------------------------------------------
  (4/4) Standard library function "sin" is used.
  ----------------------------------------------
   * In discrete variable "X.d":
     - disc dist int d = binomial(asin(sin(0.5)), 2);
                                       ^
